# pyalpm

./: .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  AUTHORS  INSTALL  MANIFEST.in  Makefile  NEWS  README  README.md  RELEASING.txt  TODO  pyalpm.c  pyalpm.h  pyproject.toml  setup.cfg  setup.py
ci/: build-pacman-git.sh  build.sh
doc/: index.rst
doc/pyalpm/: Database.rst  Handle.rst  Package.rst  Pyalpm.rst  Transaction.rst  pyalpm.rst
docs/: conf.py  index.rst
docs/pyalpm/: Database.rst  Handle.rst  Package.rst  pyalpm.rst
pycman/: __init__.py  action_database.py  action_deptest.py  action_query.py  action_remove.py  action_sync.py  action_upgrade.py  config.py  pkginfo.py  transaction.py
scripts/: lsoptdepends  pycman  pycman-database  pycman-deptest  pycman-query  pycman-remove  pycman-sync  pycman-upgrade  pycman-version
src/: db.c  db.h  handle.c  handle.h  options.c  options.h  optionsobject.c  optionsobject.h  package.c  package.h  pyalpm.c  pyalpm.h  transaction.c  util.c  util.h
test/: .gitignore  conftest.py  db.json  generate_pacman_db.py  test_alpm.py  test_db.py  test_handle.py  test_package.py  test_pycman.py  test_refcounting.py  test_transaction.py  tests.py
tests/: options.py  test_vercmp.py  tests.py
