[metadata]
name = pyalpm
description = libalpm bindings for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Rémy Oudompheng
author_email = remy@archlinux.org
classifiers=
    Development Status :: 6 - Mature
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: C
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
keywords = archlinux, pacman
license = GPLv3+
url = https://git.archlinux.org/pyalpm.git/about/

[options]
packages = pycman
scripts =
    scripts/lsoptdepends
    scripts/pycman-database
    scripts/pycman-deptest
    scripts/pycman-query
    scripts/pycman-remove
    scripts/pycman-sync
    scripts/pycman-upgrade
    scripts/pycman-version
setup_requires =
    pkgconfig
